GetFile(s) full grpc path and minimal testing
